--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "test:int": "cross-env NODE_OPTIONS=--no-deprecation vitest run --config ./vitest.config.mts"
   },
   "dependencies": {
+    "@payloadcms/db-postgres": "3.53.0",
     "@payloadcms/next": "3.53.0",
     "@payloadcms/payload-cloud": "3.53.0",
     "@payloadcms/richtext-lexical": "3.53.0",
+    "@payloadcms/storage-vercel-blob": "^3.53.0",
     "@payloadcms/ui": "3.53.0",
     "cross-env": "^7.0.3",
     "dotenv": "16.4.7",
@@ -28,10 +30,11 @@
     "next": "15.4.4",
     "payload": "3.53.0",
     "react": "19.1.0",
-    "sharp": "0.34.2",
-    "@payloadcms/db-postgres": "3.53.0"
+    "react-dom": "19.1.0",
+    "sharp": "0.34.2"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.1",
     "@playwright/test": "1.54.1",
     "@testing-library/react": "16.3.0",
     "@types/node": "^22.5.4",
