--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@payloadcms/db-postgres": "3.53.0",
     "@payloadcms/next": "3.53.0",
     "@payloadcms/payload-cloud": "3.53.0",
+    "@payloadcms/plugin-form-builder": "3.53.0",
     "@payloadcms/richtext-lexical": "3.53.0",
     "@payloadcms/storage-vercel-blob": "^3.53.0",
     "@payloadcms/ui": "3.53.0",
