--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@payloadcms/richtext-lexical": "3.53.0",
     "@payloadcms/storage-vercel-blob": "^3.53.0",
     "@payloadcms/ui": "3.53.0",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/postcss": "^4.1.12",
     "class-variance-authority": "^0.7.1",
@@ -34,6 +35,7 @@
     "graphql": "^16.8.1",
     "lucide-react": "^0.542.0",
     "next": "15.4.4",
+    "nextjs-toploader": "^3.8.16",
     "payload": "3.53.0",
     "postcss": "^8.5.6",
     "react": "19.1.0",
